# prebuild_3rd

./: .gitignore  build.gradle.kts  build_libyuv_aar.sh  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mgg/base/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/mgg/base/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mgg/base/: ExampleUnitTest.kt
base_jni/: build.gradle.kts
base_jni/src/androidTest/java/com/mgg/base/: ExampleInstrumentedTest.kt
base_jni/src/main/cpp/: CMakeLists.txt  TestData.cpp  TestData.h  base_test.cpp  library_loader.cc
base_jni/src/main/cpp/include/android/: SdkVersion.h  android_utils.h  build.prop  build_info.h
base_jni/src/main/cpp/include/base32/: base32.h
base_jni/src/main/cpp/include/base64/: base64.h
base_jni/src/main/cpp/include/jni/: CTString.h  base_type_traits.h  java_class.hpp  java_class_global_def.hpp  java_exception_thrower.hpp  java_global_ref_by_copy.hpp  java_global_ref_by_move.hpp  java_global_weak_ref.hpp  java_local_ref.hpp  java_method.hpp  jni_int_wrapper.h  jni_util.h  jni_utils.hpp  jni_weak_ref.h  scoped_java_ref.h
base_jni/src/main/cpp/include/log/: log_level.h  log_settings.h  logging.h
base_jni/src/main/cpp/include/macros/: concat.h  if.h  macros.h  remove_parens.h  uniquify.h
base_jni/src/main/cpp/include/memory/: singleton_stdmutex.h
base_jni/src/main/cpp/include/network/: android_network_monitor.h  android_network_sharing_platform.h  connection_type.h  connectivity_manager.h  connectivity_manager_impl.h  context.h  context_impl.h  jni_android_network_monitor.h  network_monitor.h  network_sharing_platform.h
base_jni/src/main/cpp/include/path/: Path.h
base_jni/src/main/cpp/include/string/: string_conversion.h  string_piece.h
base_jni/src/main/cpp/include/thread/: ThreadUtils.h  thread_local.h
base_jni/src/main/cpp/include/utils/: CountDownLatch.h  CyclicBarrier.h  architecture.h  build_config.h  compiler.h  eintr_wrapper.h  unique_fd.h  unique_object.h
base_jni/src/main/cpp/src/android/: android_utils.cc  build_info.cc
base_jni/src/main/cpp/src/base32/: base32.cc
base_jni/src/main/cpp/src/base64/: base64.cc
base_jni/src/main/cpp/src/jni/: java_class.cpp  java_class_global_def.cpp  java_exception_thrower.cpp  java_global_ref_by_copy.cpp  java_global_ref_by_move.cpp  java_global_weak_ref.cpp  java_method.cpp  jni_util.cc  jni_utils.cpp  jni_weak_ref.cc  scoped_java_ref.cc
base_jni/src/main/cpp/src/log/: log_settings.cc  log_settings_state.cc  logging.cc
base_jni/src/main/cpp/src/memory/: free_deleter.h
base_jni/src/main/cpp/src/network/: android_network_monitor.cc  android_network_sharing_platform.cc  connectivity_manager_impl.cc  context_impl.cc  jni_android_network_monitor.cc
base_jni/src/main/cpp/src/path/: Path.cpp
base_jni/src/main/cpp/src/singleton/: default_singleton_traits.h  lazy_instance_helpers.cc  lazy_instance_helpers.h  static_memory_singleton_traits.h
base_jni/src/main/cpp/src/stacktrace/: stacktrace.cc  stacktrace.h
base_jni/src/main/cpp/src/string/: string_conversion.cc
base_jni/src/main/cpp/src/thread/: ThreadUtils.cpp  thread_local.cc
base_jni/src/main/cpp/src/utils/: CountDownLatch.cpp  CyclicBarrier.cpp  architecture.cpp  unique_fd.cc
base_jni/src/main/java/com/mgg/base/: NativeBaseLib.kt
base_jni/src/main/java/com/mgg/base/executor/: ArchTaskExecutor.java  DefaultTaskExecutor.java  TaskExecutor.java
base_jni/src/main/java/com/mgg/base/trackers/: BroadcastReceiverConstraintTracker.kt  ConstraintListener.kt  ConstraintTracker.kt  ReadMe.txt  Trackers.kt
base_jni/src/main/java/com/mgg/base/trackers/battery/: BatteryChargingTracker.kt  BatteryNotLowTracker.kt
base_jni/src/main/java/com/mgg/base/trackers/net/: AndroidTrafficStats.java  ConnectionTypeObserver.java  ThreadStatsUid.java  TrafficStatsError.java
base_jni/src/main/java/com/mgg/base/trackers/network/: ConnectionType.java  NetworkApi21.kt  NetworkApi23.kt  NetworkApi24.kt  NetworkState.kt  NetworkStateTracker.kt  NetworkStateTracker24.kt  NetworkStateTrackerMonitor.java  NetworkStateTrackerPre24.kt  NetworkUtils.kt
base_jni/src/main/java/com/mgg/base/trackers/storage/: StorageNotLowTracker.kt
base_variant/: build.gradle.kts
base_variant/src/androidTest/java/com/mgg/varinat/: ExampleInstrumentedTest.kt
base_variant/src/main/cpp/: CMakeLists.txt
base_variant/src/main/cpp/include/: jni_variant_util.h  variant.h  variant_util.h
base_variant/src/main/cpp/src/: jni_variant_util.cc  variant.cc  variant_util.cc
base_variant/src/main/java/com/mgg/varinat/: NativeVariantLib.kt
base_variant/src/test/java/com/mgg/varinat/: ExampleUnitTest.kt
flatbuffers/: build.gradle.kts  flatbuffers.gradle
flatbuffers/src/androidTest/java/com/mgg/flatbuffers/: ExampleInstrumentedTest.kt
flatbuffers/src/main/cpp/: CMakeLists.txt
flatbuffers/src/main/java/com/mgg/flatbuffers/: NativeFlatBuffersLib.kt
flatbuffers/src/test/java/com/mgg/flatbuffers/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libyuv/: build.gradle  gradle.properties
libyuv/src/androidTest/java/com/google/libyuv/: ExampleInstrumentedTest.kt
libyuv/src/test/java/com/google/libyuv/: ExampleUnitTest.kt
